Tribute: Minor changes throughout which fixes image jumping. Need to replace title with text and link.

--- a/Free Code Camp/Tribute/css/style.css
+++ b/Free Code Camp/Tribute/css/style.css
@@ -1,4 +1,4 @@
-img {
+img, p {
     width: 100%;
     height: 210px;
     overflow: hidden;
